Fix horizontal scroll bar

--- a/themes/admin_themes/Artemis/acp_styles.css
+++ b/themes/admin_themes/Artemis/acp_styles.css
@@ -3,6 +3,10 @@ html, body, #tinymce body, .form-control {
     font: 14px/16px "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 .spacer-xs {
     margin: 15px 0;
 }
